[package]
name = "rtl8139-rs"
version = "0.1.3"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2021"
description = "no_std rtl8139 driver with async and sync interfaces"
documentation = "https://docs.rs/rtl8139-rs"
readme = "README.md"
repository = "https://github.com/vgarleanu/rtl8139-rs"
license = "MIT"
keywords = ["no_std", "driver", "rtl8139", "nic"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]


[dependencies]
x86_64 = "0.15.2"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"]}
futures-util = { version = "0.3.31", optional = true, default-features = false, features = ["alloc", "async-await", "sink"] }

log = "0.4.26"

[features]
default = ["async"]
async = ["futures-util"]
